added User handlers and Service
